Update personal information and featured repositories

--- a/index.html
+++ b/index.html
@@ -143,15 +143,16 @@
                         name: 'Steve',
                         title: 'Software Developer',
                         bio: 'Specialized in healthcare technology applications with expertise in HL7/FHIR messaging systems and accessibility technology. Passionate about building AI/ML solutions that make a difference.',
-                        email: 'your.email@example.com',
-                        github: 'your-github-username',
-                        linkedin: 'https://linkedin.com/in/your-profile',
+                        email: 'steve.appeltants@outlook.com',
+                        github: 'steveappeltantsPXL',
+                        linkedin: 'https://www.linkedin.com/in/steve-appeltants/',
                         
                         // List the GitHub repo names you want to feature
                         featuredRepos: [
-                            'repo-name-1',
-                            'repo-name-2',
-                            'repo-name-3'
+                            '2526-Jessa'
+                            'WebSLT',
+                            'WebSLT-Frontend',
+                            'Lingo'
                         ],
                         
                         skills: [
