--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Steve - Software Developer Portfolio</title>
+    <title>Steve - Software Manager Portfolio</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@3.3.4/dist/vue.global.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -141,10 +141,10 @@
                     // Edit this section with your information
                     config: {
                         name: 'Steve',
-                        title: 'Software Developer',
+                        title: 'Software Manager',
                         bio: 'Specialized in healthcare technology applications with expertise in HL7/FHIR messaging systems and accessibility technology. Passionate about building AI/ML solutions that make a difference.',
                         email: 'steve.appeltants@outlook.com',
-                        github: 'steveappeltantsPXL',
+                        github: 'https://steveappeltantsPXL',
                         linkedin: 'https://www.linkedin.com/in/steve-appeltants/',
                         
                         // List the GitHub repo names you want to feature
