Update portfolio title and translate content to English
Updated the portfolio to reflect a change in title and personal information from 'Jouw Naam' to 'Steve Appeltants', and translated various sections from Dutch to English.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Developer Portfolio</title>
+    <title>Interactive Manager Portfolio</title>
     <style>
         * {
             margin: 0;
@@ -262,9 +262,9 @@
 <body>
     <!-- Hero Section -->
     <div class="hero">
-        <h1>Jouw Naam</h1>
-        <p>Software Developer | Healthcare Tech | AI/ML Enthusiast</p>
-        <div class="scroll-indicator">↓ Scroll om mijn verhaal te ontdekken</div>
+        <h1>Steve Appeltants</h1>
+        <p>Software Manager | Healthcare Tech | AI/ML Enthusiast</p>
+        <div class="scroll-indicator">↓ Scroll to discover my story</div>
     </div>
 
     <!-- Timeline Section -->
@@ -275,7 +275,7 @@
                 <div class="timeline-dot"></div>
                 <div class="project-card">
                     <h3>🏥 HL7 Orchestrator-Agent Service</h3>
-                    <p>Een schaalbare messaging service voor healthcare interoperabiliteit, gebouwd met moderne architectuurpatronen.</p>
+                    <p>A scalable messaging service for healthcare interoperability, built with modern architecture patterns.</p>
                     <div class="tech-stack">
                         <span class="tech-badge">Kotlin</span>
                         <span class="tech-badge">HL7 FHIR</span>
@@ -290,8 +290,8 @@
 }
                     </div>
                     <div class="interactive-demo">
-                        <p>Verwerk meer dan 10,000 berichten per seconde</p>
-                        <button class="demo-button" onclick="alert('Live demo zou hier worden getoond!')">Bekijk Live Demo</button>
+                        <p>Process over 10,000 messages per second</p>
+                        <button class="demo-button" onclick="alert('Live demo would be shown here!')">Watch Live Demo</button>
                     </div>
                 </div>
             </div>
@@ -301,7 +301,7 @@
                 <div class="timeline-dot"></div>
                 <div class="project-card">
                     <h3>🤟 AI Sign Language Translator</h3>
-                    <p>Real-time gebarentaal vertaling met computer vision en deep learning voor toegankelijke communicatie.</p>
+                    <p>Real-time sign language translation using computer vision and deep learning for accessible communication.</p>
                     <div class="tech-stack">
                         <span class="tech-badge">TensorFlow</span>
                         <span class="tech-badge">MediaPipe</span>
@@ -316,9 +316,9 @@ handDetector.<span style="color: #dcdcaa;">detectGesture</span>(frame)
     }
                     </div>
                     <div class="interactive-demo">
-                        <p>95% accuracy op 1000+ gebaren</p>
-                        <button class="demo-button" onclick="alert('Probeer de demo in de browser!')">Test de AI</button>
-                    </div>
+                        <p>95% accuracy op 20,000+ gebaren</p>
+                        <button class="demo-button" onclick="alert('Try the demo in your browser!')">Test the AI</button>
+                    </div
                 </div>
             </div>
 
@@ -327,7 +327,7 @@ handDetector.<span style="color: #dcdcaa;">detectGesture</span>(frame)
                 <div class="timeline-dot"></div>
                 <div class="project-card">
                     <h3>📊 Medical Data Dashboard</h3>
-                    <p>Real-time monitoring dashboard voor healthcare data met Vue.js frontend en Kotlin backend.</p>
+                    <p>Real-time monitoring dashboard for healthcare data with Vue.js frontend and Kotlin backend.</p>
                     <div class="tech-stack">
                         <span class="tech-badge">Vue.js</span>
                         <span class="tech-badge">Kotlin</span>
@@ -352,7 +352,7 @@ handDetector.<span style="color: #dcdcaa;">detectGesture</span>(frame)
 
     <!-- Skills Section -->
     <div class="skills-section">
-        <h2 style="font-size: 2.5rem; margin-bottom: 1rem;">Mijn Expertise</h2>
+        <h2 style="font-size: 2.5rem; margin-bottom: 1rem;">My Expertise</h2>
         <div class="skills-grid">
             <div class="skill-item">
                 <div class="skill-icon">🏥</div>
