Update accuracy text for gesture recognition

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ handDetector.<span style="color: #dcdcaa;">detectGesture</span>(frame)
     }
                     </div>
                     <div class="interactive-demo">
-                        <p>95% accuracy op 20,000+ gebaren</p>
+                        <p>98% accuracy on 20,000+ gestures</p>
                         <button class="demo-button" onclick="alert('Try the demo in your browser!')">Test the AI</button>
                     </div
                 </div>
