Update alert message in dashboard button

--- a/index.html
+++ b/index.html
@@ -341,9 +341,9 @@ handDetector.<span style="color: #dcdcaa;">detectGesture</span>(frame)
     <span style="color: #9cdcaa;">onUpdate</span>: <span style="color: #569cd6;">(data)</span> => render(data)
 })
                     </div>
-                    <div class="interactive-demo">
+                        <div class="interactive-demo">
                         <p>Live data visualisatie</p>
-                        <button class="demo-button" onclick="alert('Dashboard zou hier laden!')">Open Dashboard</button>
+                        <button class="demo-button" onclick="alert('Dashboard should load here!')">Open Dashboard</button>
                     </div>
                 </div>
             </div>
