--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ handDetector.<span style="color: #dcdcaa;">detectGesture</span>(frame)
                     <div class="interactive-demo">
                         <p>98% accuracy on 20,000+ gestures</p>
                         <button class="demo-button" onclick="alert('Try the demo in your browser!')">Test the AI</button>
-                    </div
+                    </div>
                 </div>
             </div>
 
