Revise personal and professional details in index.html
Updated personal information including email, GitHub, LinkedIn, job title, and education details.

--- a/index.html
+++ b/index.html
@@ -723,10 +723,10 @@ handDetector.<span style="color: #dcdcaa;">detectGesture</span>(frame)
                     config: {
                         name: 'Steve Appeltants',
                         title: 'Software Manager | Healthcare Tech | AI/ML Enthusiast',
-                        bio: 'Specialized in healthcare technology applications with expertise in HL7/FHIR messaging systems and accessibility technology. Passionate about building AI/ML solutions that make a difference.',
-                        email: 'your.email@example.com',
-                        github: 'your-github-username',
-                        linkedin: 'https://linkedin.com/in/your-profile',
+                        bio: 'Specialized in healthcare technology applications with expertise in HL7/FHIR messaging systems and accessibility technology.Passionate about building AI/ML solutions that make a difference.',
+                        email: 'steve.appeltants@outlook.com',
+                        github: 'https://github.com/steveappeltantsPXL',
+                        linkedin: 'https://www.linkedin.com/in/steve-appeltants/',
                         
                         featuredRepos: [
                             'repo-name-1',
@@ -755,8 +755,8 @@ handDetector.<span style="color: #dcdcaa;">detectGesture</span>(frame)
                         
                         experience: [
                             {
-                                title: 'Software Developer',
-                                company: 'Your Company',
+                                title: 'Software Management',
+                                company: 'University College PXL',
                                 period: '2020 - Present',
                                 highlights: [
                                     'Developed orchestrator-agent services for healthcare interoperability',
@@ -770,8 +770,8 @@ handDetector.<span style="color: #dcdcaa;">detectGesture</span>(frame)
                         education: [
                             {
                                 degree: 'Bachelor of Applied Science in Software Management',
-                                institution: 'Your University',
-                                period: '2015 - 2019'
+                                institution: 'University College PXL',
+                                period: '2020 - Present'
                             }
                         ]
                     },
