Fix GitHub URL format in index.html

--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@ handDetector.<span style="color: #dcdcaa;">detectGesture</span>(frame)
                         title: 'Software Manager | Healthcare Tech | AI/ML Enthusiast',
                         bio: 'Specialized in healthcare technology applications with expertise in HL7/FHIR messaging systems and accessibility technology.Passionate about building AI/ML solutions that make a difference.',
                         email: 'steve.appeltants@outlook.com',
-                        github: 'https://github.com/steveappeltantsPXL',
+                        github: 'steveappeltantsPXL',
                         linkedin: 'https://www.linkedin.com/in/steve-appeltants/',
                         
                         featuredRepos: [
