Remove circular scroll progress indicator and simplify scroll percentage display

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ handDetector.<span style="color: #dcdcaa;">detectGesture</span>(frame)
             <div class="scroll-nav-menu">
                 <div class="scroll-nav-title">
                     Jump to Section
-                    <span class="scroll-percentage-inline">{{ scrollPercentage }}%</span>
+                    <span class="scroll-percentage-inline">{{ scrollPercentage }}</span>
                 </div>
                 <button class="scroll-nav-btn" @click="scrollToSection('skills')" title="Go to Skills">
                     Technical Skills
