Refine personal details and enhance volunteer section styling

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <p class="organization">{{ vol.organization }}</p>
                         <p v-if="vol.website" class="volunteer-website">
                             <a :href="vol.website" target="_blank" rel="noopener noreferrer">
-                                {{ vol.website }}
+                                🌐 Visit Website →
                             </a>
                         </p>
                     </div>
