Index and Readme

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Steve Appeltants - Software Manager and Bachelor Applied Science student specializing in healthcare technology, Java/Kotlin development, and enterprise architecture.">
-    <meta name="keywords" content="Software Manager, Java Developer, Kotlin, Healthcare Tech, HL7/FHIR, Enterprise Service Bus, .NET Developer, Bachelor Applied Science">
+    <meta name="description"
+          content="Steve Appeltants - Software Manager and Prof. Bachelor Applied Computer Science specializing in healthcare technology, Java/Kotlin development, and enterprise architecture.">
+    <meta name="keywords"
+          content="Software Manager, Java Developer, Kotlin, Healthcare Tech, HL7/FHIR, Enterprise Service Bus, .NET Developer, Bachelor Applied Computer Science">
     <meta name="author" content="Steve Appeltants">
     <meta name="robots" content="index, follow">
     
