Update project details and refine styles/content formatting.

--- a/index.html
+++ b/index.html
@@ -219,6 +219,25 @@
         <div class="timeline">
             <h2>Featured Projects</h2>
             
+            <!-- Project 0: ASL-Translator -->
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="project-card card-base card-hover-strong card-interactive">
+                    <h3>🤟 ASL-Translator - Real-Time Sign Language Recognition</h3>
+                    <p>Desktop application for real-time American Sign Language recognition and translation using computer vision and on-device ML inference. Enables seamless communication between deaf/hard-of-hearing and hearing individuals.</p>
+                    <div class="tech-stack">
+                        <span class="tech-badge">C++20</span>
+                        <span class="tech-badge">ONNX Runtime</span>
+                        <span class="tech-badge">OpenCV</span>
+                        <span class="tech-badge">Dear ImGui</span>
+                        <span class="tech-badge">CMake</span>
+                    </div>
+                    <div class="project-meta">
+                        <span>📅 2025 - Present</span>
+                    </div>
+                </div>
+            </div>
+
             <!-- Project 1: Octogrid ESB -->
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
